# inverse_design

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  algorithm.html  brushes.html  conditional_generator.html  core.html  design.html  direct_optimization.html  environment.yml  forward.html  generator.html  index.html  index.ipynb  inverse_design.html  naive_inverse_design.html  nbdev.yml  optimization.html  ref42_100x100.txt  robots.txt  run_notebooks.py  search.json  settings.ini  setup.cfg  sidebar.json  sidebar.yml  sitemap.xml  touching.html  utils.html
docs/: _config.yml
inverse_design/: _modidx.py  _nbdev.py  algorithm.py  binary.py  brushes.py  conditional_generator.py  core.py  design.py  direct_optimization.py  forward.py  generator.py  inverse_design.py  inverse_design_local_generator.py  local_generator.py  naive_inverse_design.py  optimization.py  touching.py  utils.py
notebooks/: 00_core.ipynb  01_algorithm.ipynb  01_utils.ipynb  02_algorithm.ipynb  02_brushes.ipynb  02_design.ipynb  02_generator.ipynb  03_brushes.ipynb  03_design.ipynb  03_forward.ipynb  04_conditional_generator.ipynb  04_optimization.ipynb  04_touching.ipynb  05_conditional_generator.ipynb  05_direct_optimization.ipynb  06_naive_inverse_design.ipynb  06_optimization.ipynb  07_inverse_design.ipynb  08_naive_generator.ipynb  09_local_generator.ipynb  10_inverse_design_local.ipynb  brushes.html  (+12 more)
rust/: .gitignore  Cargo.toml  Makefile  ref_42_30x30.txt  test.py  time.py
rust/src/: array.rs  brushes.rs  conditional_generator.rs  debug.rs  design.rs  generator.rs  lib.rs  main.rs  python.rs  utils.rs  visualization.rs
(+15 files in other folders)
