[metadata]
name = inverse_design
version = 0.0.0
description = Inverse Design
author = Floris Laporte
author_email = floris.laporte@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
  Development Status :: 1 - Planning
  Operating System :: POSIX :: Linux
  License :: Other/Proprietary License

[options]
packages =
  inverse_design
install_requires =
  fastcore
  jax
  jaxlib
  matplotlib=2
  numpy
  ceviche

[options.extras_require]
dev =
  ipykernel
  nbdev
  nbstripout
  papermill
  pre-commit

[options.package_data]
* =
  LICENSE
  README.md
  settings.ini
